deploy/api-server/k8s/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-server
spec:
  selector:
    app: api-server
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
