deploy/api-server/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-server
spec:
  ingressClassName: nginx
  rules:
    - host: api.tuana9a.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-server
                port:
                  number: 8080
